--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+header {
+    margin: 0;
+    padding: 0;
+}
+
 h1 {
     background-color: #0D246F;
     margin: 0;
@@ -11,6 +16,20 @@ h1 {
     text-align: center;
     font-family: 'Irish Grover', sans-serif;
     font-size: 48px;
+}
+
+nav {
+    background-color: black;
+    margin: 0;
+    width: 100%;
+    height: 60px;
+
+    color: white;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: 'Inria Sans', sans-serif;
+    font-size: 30px;
 }
 
 h2 {
@@ -34,6 +53,38 @@ p {
     line-height: 1.6;
     padding-left: 20px;
     font-family: 'Inria Sans', sans-serif;
+}
+
+.p1 {
+    color: #9A9A9A;
+    margin: 0.5rem 0;
+    font-size: 18px;
+    line-height: 1.6;
+    padding-left: 20px;
+    font-family: 'Inria Sans', sans-serif;
+    font-style: italic;
+    margin-bottom: 0;
+}
+
+h3 {
+    color: white;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    font-size: 25px;
+    font-family: 'Inria Sans', sans-serif;
+    font-style: bold;
+    margin-top: 0%;
+    margin-bottom: 0;
+}
+
+.p2 {
+    color: white;
+    display: flex;
+    padding-left: 20px;
+    font-size: 20px;
+    font-family: 'Inria Sans', sans-serif;
+    margin-top: 0%;
 }
 
 body {
