--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 header {
     margin: 0;
     padding: 0;
+    width: 100%;
 }
 
 h1 {
@@ -41,7 +42,7 @@ h2 {
     color: white;
     display: flex;
     align-items: center;
-    padding-left: 20px;
+    text-indent: 16px;
     font-size: 36px;
     font-family: 'Inria Sans', sans-serif;
 }
@@ -99,4 +100,102 @@ img {
     height: 350px;
     object-fit: cover;
     display: block;
+}
+
+h4 {
+    background-color: black;
+    margin: 0;
+    width: 100%;
+    height: 63px;
+
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 32px;
+    font-family: 'Inria Sans', sans-serif;
+}
+
+.cast-container {
+    display: flex;
+    justify-content: flex-start;
+    gap: 20px;
+    padding-left: 20px;
+}
+
+.cast-images {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 65px;
+}
+
+.cast-names {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 10rem;
+}
+
+.cast-images img {
+    width: 10rem;
+    height: 15rem;
+    object-fit: cover;
+    margin-bottom: 5px;
+}
+
+.cast-names p {
+    margin: 0;
+    text-align: left;
+    width: 100%;
+
+    color: white;
+    font-size: 20px;
+    font-style: bold;
+}
+
+.cast-names .role {
+    margin: 0;
+    color: lightgrey;
+    font-size: 15px;
+}
+
+.button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+}
+
+.button {
+    padding: 15px 30px;
+    font-size: 18px;
+    width: 12rem;
+    height: 3rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+
+    background-color: #0D246F;
+    color: white;
+    text-align: center;
+}
+
+.button:hover {
+    background-color: #0A1C46;
+}
+
+footer {
+    background-color: black;
+    margin-top: 1rem;
+    width: 100%;
+    height: 45px;
+
+    color: grey;
+    font-family: 'Irish Grover', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 25px;
 }
