--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ h4 {
     flex-direction: column;
     align-items: center;
     width: 10rem;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .cast-images img {
@@ -142,6 +143,11 @@ h4 {
     height: 15rem;
     object-fit: cover;
     margin-bottom: 5px;
+    transition: transform 0.3s ease;
+}
+
+.cast-images img:hover {
+    transform: scale(1.1);
 }
 
 .cast-names p {
@@ -198,4 +204,16 @@ footer {
     align-items: center;
     text-align: center;
     font-size: 25px;
+}
+
+.more-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding-left: 20px;
+}
+
+.more-image {
+    width: 48%;
+    height: auto;
 }
